# transformer

./: .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDE.md  GOALS.md  MODULE.bazel  README.md
optimizations/pruning/: BUILD  run_pruning.py
requirements/: constraints.txt  requirements.in  requirements_lock.txt
scripts/: install_bazel.sh  setup.sh  update_requirements.sh
